--- a/index.html
+++ b/index.html
@@ -2,17 +2,65 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>@bokunaruのポートフォリオ</title>
+    <meta name="description" content="TechAcademyで作成した創作物を掲載する@bokunaruのポートフォリオサイトです。" /> 
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/common.css">
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </head>
   <body>
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="contaiver-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#site-menu">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="navbar-brand">@bokunaruのポートフォリオ</div>
+          </div>
+          <div class="collapse navbar-collapse" id="site-menu">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">TOP</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+    <div class="container">
+    <img src="./img/bokunaru_150.jpg" id="img_p" alt="bokunaruのプロフィール画像" />
     <h1>Hello, world!</h1>
+    <div class="table-responsive"> <!-- Tableのレスポンシブ対応 -->
+      <table class="table table-striped table-bordered"><!-- striped 1行間隔で背景色 bordered Tableに枠線 -->
+          <tbody>
+              <tr>
+                  <th scope="row">名前</th>
+                  <td>hiroki.haruna</td>
+              </tr>
+              <tr>
+                  <th scope="row">アカウント</th>
+                  <td><a href="https://github.com/bokunaru">Github</a>｜<a href="https://titter.com/bokunaru">Twitter</a></td>
+              </tr>
+              <tr>
+                  <th scope="row">自己紹介</th>
+                  <td>30歳、一歩手前の社会人です。よろしくお願いします。</td>
+              </tr>
+          </tbody>
+      </table>
+     </div>
+    </div>
+  <footer>
+    <div class="copyright">© 2015 @bokunaru portfolio.</div>
+  </footer>
   </body>
 </html>
