--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>@bokunaruのポートフォリオ</title>
     <meta name="description" content="TechAcademyで作成した創作物を掲載する@bokunaruのポートフォリオサイトです。" /> 
     <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <!-- jQuery読み込み -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- BootstrapのJS読み込み -->
